--- a/statistics/probability-intro/02 intro_to_data_Coursera.rmd
+++ b/statistics/probability-intro/02 intro_to_data_Coursera.rmd
@@ -1,18 +1,13 @@
 ---
-title: "Introduction to data"
+title: "Introduction to data - KEY"
 output: statsr:::statswithr_lab
 ---
-
-<div id="instructions">
-Complete all **Exercises**, and submit answers to **Questions** on the Coursera 
-platform.
-</div>
 
 Some define statistics as the field that focuses on turning information into
 knowledge. The first step in that process is to summarize and describe the raw
 information - the data. In this lab we explore flights, specifically a random
 sample of domestic flights that departed from the three major 
-New York City airport in 2013. We will generate simple graphical and numerical 
+New York City airports in 2013. We will generate simple graphical and numerical 
 summaries of data on these flights and explore delay times. As this is a large 
 data set, along the way you'll also learn the indispensable skills of data 
 processing and subsetting.
@@ -106,7 +101,7 @@ some questions we might want to answer with these data:
 destination tend to be. 
 - We might want to evaluate how departure delays vary over months. 
 - Or we might want to determine which of the three major NYC airports has a better 
-on time percentage for departing flights.
+on-time percentage for departing flights.
 
 ### Seven verbs
 
@@ -233,7 +228,7 @@ flights headed to SFO **or** in February we can use the `|` instead of the comma
 1. Create a new data frame that includes flights headed to SFO in February, and save 
 this data frame as `sfo_feb_flights`. How many flights meet these criteria? 
 <ol>
-<li> **68** </li> 
+<li> 68 **- CORRECT ANSWER**</li> 
 <li> 1345 </li> 
 <li> 2286 </li> 
 <li> 3563 </li>
@@ -241,8 +236,7 @@ this data frame as `sfo_feb_flights`. How many flights meet these criteria?
 </ol>
 
 ```{r sfo-feb-flights}
-# type your code for Question 1 here, and Knit
-sfo_feb_flights %>% summarise(n=n())
+dim(sfo_feb_flights)
 ```
 
 
@@ -251,17 +245,19 @@ delays of `sfo_feb_flights`. Which of the following is false?
 <ol>
 <li> The distribution is unimodal. </li> 
 <li> The distribution is right skewed. </li> 
-<li> **No flight is delayed more than 2 hours.** </li> 
+<li> No flight is delayed more than 2 hours. **- CORRECT ANSWER**</li> 
 <li> The distribution has several extreme values on the right side. </li>
 <li> More than 50% of flights arrive on time or earlier than scheduled. </li>
 </ol>
 
 ```{r sfo-feb-flights-arrival-delays}
-# type your code for Question 2 here, and Knit
-ggplot(data = sfo_feb_flights, aes(x=arr_delay)) + geom_histogram(binwidth = 10)
+ggplot(data = sfo_feb_flights, aes(x = arr_delay)) +
+  geom_histogram(binwidth = 10)
+sfo_feb_flights %>%
+  summarize(mean(arr_delay), median(arr_delay), max(arr_delay))
 ```
 
-Another useful functionality is being able to quickly calculate summary 
+Another useful functionality is the ability to quickly calculate summary 
 statistics for various groups in your data frame. For example, we can modify the 
 above command using the `group_by` function to get the same summary stats for 
 each origin airport:
@@ -276,19 +272,21 @@ Here, we first grouped the data by `origin`, and then calculated the summary
 statistics.
 
 3.  Calculate the median and interquartile range for `arr_delay`s of flights in the 
-`sfo_feb_flights` data frame, grouped by carrier. Which carrier has the hights 
+`sfo_feb_flights` data frame, grouped by carrier. Which carrier is the has the highest 
 IQR of arrival delays? 
 <ol>
 <li> American Airlines </li> 
 <li> JetBlue Airways </li> 
 <li> Virgin America </li> 
-<li> **Delta and United Airlines** </li>
+<li> Delta and United Airlines **- CORRECT ANSWER**</li>
 <li> Frontier Airlines </li>
 </ol>
 
 ```{r sfo-feb-flights-arrival-delays-carrier}
-# type your code for Question 3 here, and Knit
-sfo_feb_flights %>% group_by(carrier) %>% summarise(median_ad = median(arr_delay), IQR_ad = IQR(arr_delay))
+sfo_feb_flights %>%
+  group_by(carrier) %>%
+  summarize(med_ad = median(arr_delay), iqr_ad = IQR(arr_delay)) %>%
+  arrange(desc(iqr_ad))
 ```
 
 ### Departure delays over months
@@ -315,14 +313,16 @@ nycflights %>%
 <ol>
 <li> January </li> 
 <li> March </li> 
-<li> **July** </li> 
+<li> July **- CORRECT ANSWER** </li> 
 <li> October </li>
 <li> December </li>
 </ol>
 
 ```{r highest-avg-dep-delay-month}
-# type your code for Question 4 here, and Knit
-
+nycflights %>%
+  group_by(month) %>%
+  summarise(mean_dd = mean(dep_delay)) %>%
+  arrange(desc(mean_dd))
 ```
 
 
@@ -332,24 +332,23 @@ nycflights %>%
 <li> March </li> 
 <li> July </li> 
 <li> October </li>
-<li> **December** </li>
+<li> December **- COORECT ANSWER**</li>
 </ol>
 
 ```{r highest-median-dep-delay-month}
-# type your code for Question 5 here, and Knit
 nycflights %>%
   group_by(month) %>%
-  summarise(median_dd = median(dep_delay)) %>%
-  arrange(desc(median_dd))
+  summarise(med_dd = median(dep_delay)) %>%
+  arrange(desc(med_dd))
 ```
 
 
 6.  Is the mean or the median a more reliable measure for deciding which month(s) to 
 avoid flying if you really dislike delayed flights, and why? 
 <ol>
-<li> Mean would be more reliable as it gives us the true average. </li> 
+<li> Mean would be more reliable as it gives us the true average. **- CORRECT ANSWER**</li> 
 <li> Mean would be more reliable as the distribution of delays is symmetric. </li> 
-<li> **Median would be more reliable as the distribution of delays is skewed.** </li> 
+<li> Median would be more reliable as the distribution of delays is skewed. </li> 
 <li> Median would be more reliable as the distribution of delays is symmetric. </li>
 <li> Both give us useful information. </li>
 </ol>
@@ -412,19 +411,19 @@ nycflights %>%
   arrange(desc(ot_dep_rate))
 ```
 
-**The summarise step is telling R to count up how many records of the currently found group are on time - sum(dep_type == "on time”) - and divide that result by the total number of elements in the currently found group - n() - to get a proportion, then to store the answer in a new variable called ot_dep_rate.**
-
 7.  If you were selecting an airport simply based on on time departure percentage, 
 which NYC airport would you choose to fly out of? 
 <ol>
 <li> EWR </li> 
 <li> JFK </li> 
-<li> **LGA** </li> 
+<li> LGA **- CORRECT ANSWER**</li> 
 </ol>
 
 ```{r on-time-dep-perc-airport}
-# type your code for Question 7 here, and Knit
-
+nycflights %>%
+  group_by(origin) %>%
+  summarise(ot_dep_rate = sum(dep_type == "on time") / n()) %>%
+  arrange(desc(ot_dep_rate))
 ```
 
 We can also visualize the distribution of on on time departure rate across 
@@ -444,7 +443,7 @@ can be calculated as distance divided by number of hours of travel, and note tha
 pipe to select just these two variables with `select(avg_speed, tailnum)`. You can 
 Google this tail number to find out more about the aircraft. 
 <ol>
-<li> **N666DN** </li> 
+<li> N666DN **- CORRECT ANSWER**</li> 
 <li> N755US </li> 
 <li> N779JB </li> 
 <li> N947UW </li> 
@@ -452,9 +451,11 @@ Google this tail number to find out more about the aircraft.
 </ol>
 
 ```{r fastest-avg-speed-tailnum}
-# type your code for Question 8 here, and Knit
-nycflights <- nycflights %>% mutate(avg_speed = distance / air_time * 60 )
-nycflights %>% select(avg_speed, tailnum) %>% group_by(tailnum) %>% arrange(desc(avg_speed))
+nycflights <- nycflights %>%
+  mutate(avg_speed = distance / (air_time/60))
+nycflights %>%
+  select(avg_speed, tailnum) %>%
+  arrange(desc(avg_speed))
 ```
 
 
@@ -463,27 +464,32 @@ about the relationship between average speed and distance.
 <ol>
 <li> As distance increases the average speed of flights decreases. </li> 
 <li> The relationship is linear. </li> 
-<li> **There is an overall postive association between distance and average speed.** </li> 
+<li> There is an overall postive association between distance and average speed. **- CORRECT ANSWER**</li> 
 <li> There are no outliers. </li> 
 <li> The distribution of distances are uniform over 0 to 5000 miles. </li> 
 </ol>
 
 ```{r avg-speed-dist-scatter}
-# type your code for Question 9 here, and Knit
-ggplot(data=nycflights, aes(x=avg_speed, y=distance)) + geom_point()
+ggplot(nycflights, aes(x = distance, y = avg_speed)) +
+  geom_point()
 ```
 
 
 10.  Suppose you define a flight to be "on time" if it gets to the destination on 
 time or earlier than expected, regardless of any departure delays. Mutate the data 
 frame to create a new variable called `arr_type` with levels `"on time"` and 
-`"delayed"` based on this definition. Then, determine the on time arrival percentage 
-based on whether the flight departed on time or not. What proportion of flights  that 
-were `"delayed"` departing arrive `"on time"`? 
-[NUMERIC INPUT] 0.09847974
+`"delayed"` based on this definition. Also mutate to create a new variable called 
+`dep_type` with levels `"on time"` and `"delayed"` depending on whether there was ny 
+departure delay. Then, determine the on time arrival percentage based on whether the 
+flight departed on time or not. What percent of flights that were `"delayed"` 
+departing arrive `"on time"`? 
+**CORRECT NUMERIC INPUT: 0.27**
 
 ```{r on-time-arr-perc}
-# type your code for Question 10 here, and Knit
-nycflights <- nycflights %>% mutate(arr_type=ifelse(arr_delay <= 0, "on time", "delayed"))
-nycflights %>% summarise(rate = sum(arr_type == "on time" & dep_type == "delayed") / sum(arr_type == "on time"))
+nycflights %>%
+  mutate(arr_type = ifelse(arr_delay <= 0, "on time", "delayed")) %>%
+  mutate(dep_type = ifelse(dep_delay <= 0, "on time", "delayed")) %>%
+  select(arr_type, dep_type) %>%
+  table()
+3508 / (3508 + 9291)
 ```
